@@ -1,3 +1,4 @@
+#!/usr/bin/env perl
 =head1 NAME
 
 t/server/start - simple POP3 server for testing Mail::Transport::POP3
@@ -143,6 +144,7 @@ so a statistics list for one successful session could be:
 
 use strict;
 use IO::Socket;
+use IO::Socket::IP;
 use Digest::MD5 qw(md5_hex);
 
 # Obtain the directory to work on
@@ -181,7 +183,7 @@ while (my $keyword = shift) {
 # Create a server that can only take one connection at a time
 
 $| = 1;
-my $server = IO::Socket::INET->new(
+my $server = IO::Socket::IP->new(
   Type      => SOCK_STREAM,
   Listen    => 1,
   @port,
