@@ -3,6 +3,10 @@
 
 version 3.007:
 
+	Changes:
+	- use IO::Socket::IP to replace IO::Socket::INET
+	  [J Plesnik] rt.cpan.org#149607
+
 version 3.006: Mon 28 Aug 13:35:25 CEST 2023
 
 	Improvements:
